# vish

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs  get_home.c
src/: main.rs
src/ffi/: passwd.c
src/vish/: app.rs  buffer.rs  command.rs  environment.rs  io.rs  mod.rs  passwd.rs
src/vish/io/: mod.rs
src/vish/io/display/: mod.rs
src/vish/io/reader/: mod.rs
src/vish/io/string/: expand_parameter.rs  mod.rs  substitute_command.rs
src/vish/string/: field.rs
