[package]
name = "vish"
version = "0.1.0"
edition = "2021"
license = "ISC"
description = "A featureful POSIX-compliant shell that will leave you impressed."
readme = "README.md"
repository = "https://github.com/llucasls/vish"

[dependencies]
libc = "0.2.155"
sqlite = "0.36.0"
termios = "0.3.3"

[build-dependencies]
cc = "1.0.97"
